New LateX templates

--- a/templates/latex-report.tex
+++ b/templates/latex-report.tex
@@ -1,4 +1,5 @@
-\documentclass[a4paper]{report}
+\documentclass[a4paper,german]{report}
+\usepackage[utf8]{inputenc}
 \usepackage{german}
 \begin{document}
 
